--- a/directions.html
+++ b/directions.html
@@ -2,182 +2,185 @@
 <html lang="en">
 
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-	<title>Jigs Up | Home</title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+  <title>Jigs Up | Home</title>
 
-	<!-- Bootstrap -->
-	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
-	<link href="css/custom.css" rel="stylesheet">
-	 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <!-- Bootstrap -->
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/custom.css" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
-	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-	<!--[if lt IE 9]>
+  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!--[if lt IE 9]>
 		  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 		  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 		<![endif]-->
 
-	<!-- FAVICON -->
-	<link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
-	<link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
-	<link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-icon-76x76.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-icon-114x114.png">
-	<link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-icon-120x120.png">
-	<link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-icon-144x144.png">
-	<link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-icon-152x152.png">
-	<link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-icon-180x180.png">
-	<link rel="icon" type="image/png" sizes="192x192" href="favicon/android-icon-192x192.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
-	<link rel="manifest" href="favicon/manifest.json">
-	<meta name="msapplication-TileColor" content="#ffffff">
-	<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-	<meta name="theme-color" content="#ffffff">
+  <!-- FAVICON -->
+  <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="favicon/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+  <link rel="manifest" href="favicon/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
 
-	<nav class="navbar navbar-inverse navbar-fixed-top">
-		<div class="container">
-			<!-- Brand and toggle get grouped for better mobile display -->
+  <nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+      <!-- Brand and toggle get grouped for better mobile display -->
 
-			<div class="navbar-header">
-				<button class="navbar-toggle" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button">
-					<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
-				<a class="navbar-brand" href="index.html">
-					<img src="images/logo.png" /> </a>
-				<!-- Logo top aligns with navbar text top. -->
-			</div>
-			<!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="navbar-header">
+        <button class="navbar-toggle" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="index.html">
+          <img src="images/logo.png" /> </a>
+        <!-- Logo top aligns with navbar text top. -->
+      </div>
+      <!-- Collect the nav links, forms, and other content for toggling -->
 
-			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-				<ul class="nav navbar-nav">
-					<li class="dropdown">
-						<a class="dropdown-toggle navcol" data-toggle="dropdown" href="#">Event<span class="caret"></span></a>
-						<ul class="dropdown-menu">
-							<li><a href="directions.html">Directions</a></li>
-							<li role="presentation" class="divider"></li>
-							<li><a href="schedule.html">Schedule</a></li>
-							<li role="presentation" class="divider"></li>
-							<li><a href="prizes.html">Prizes</a></li>
-							<li role="presentation" class="divider"></li>
-							<li><a href="sponsors.html">Sponsors</a></li>
-							<li role="presentation" class="divider"></li>
-							<li><a href="results.html">Results</a></li>
-						</ul>
-					</li>
-					<li class="navcol"><a href="register.html">Register</a></li>
-					<li class="navcol"><a href="contact.html">Contact</a></li>
-					<li class="social-media">
-						<a target="_blank" class="fbook" href="https://www.facebook.com/pages/The-Jigs-Up-Ice-Fishing-Contest/736663866412522">
-							<img src="images/facebook.png" class="fbook" </img>
-						</a>
-					</li>
-					<li>
-						<a target="_blank" class="twitter" href="https://twitter.com/uwecrecreation">
-							<img src="images/twitter.png" class="twitter" </img>
-						</a>
-					</li>
-					<li>
-						<a target="_blank" class="twitter" href="https://instagram.com/UWEC_Recreation/">
-							<img src="images/instagram.png" class="fbook" </img>
-						</a>
-					</li>
-				</ul>
-			</div>
-			<!-- /.navbar-collapse -->
-		</div>
-		<!-- /.container -->
-	</nav>
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li class="dropdown">
+            <a class="dropdown-toggle navcol" data-toggle="dropdown" href="#">Event<span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="directions.html">Directions</a></li>
+              <li role="presentation" class="divider"></li>
+              <li><a href="schedule.html">Schedule</a></li>
+              <li role="presentation" class="divider"></li>
+              <li><a href="prizes.html">Prizes</a></li>
+              <li role="presentation" class="divider"></li>
+              <li><a href="sponsors.html">Sponsors</a></li>
+              <li role="presentation" class="divider"></li>
+              <li><a href="results.html">Results</a></li>
+            </ul>
+          </li>
+          <li class="navcol"><a href="register.html">Register</a></li>
+          <li class="navcol"><a href="contact.html">Contact</a></li>
+          <li class="social-media">
+            <a target="_blank" class="fbook" href="https://www.facebook.com/pages/The-Jigs-Up-Ice-Fishing-Contest/736663866412522">
+              <img src="images/facebook.png" class="fbook" </img>
+            </a>
+          </li>
+          <li>
+            <a target="_blank" class="twitter" href="https://twitter.com/uwecrecreation">
+              <img src="images/twitter.png" class="twitter" </img>
+            </a>
+          </li>
+          <li>
+            <a target="_blank" class="twitter" href="https://instagram.com/UWEC_Recreation/">
+              <img src="images/instagram.png" class="fbook" </img>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container -->
+  </nav>
 </head>
 
 
 <body>
-	<br />
-	<br />
-	<br />
-	<section id="directionsHeader">
-		<div class="container">
-			<div class="row">
-				<div class="col-sm-8">
-					<h2 class="headers">Directions</h2>
-<br />
-				</div>
-				<!-- #col-sm-8  -->
-			</div>
-			<!-- #row  -->
-		</div>
-		<!-- #container  -->
-	</section>
-
-
-
-<div class="container ">
-
-
-  <div class="panel-group" id="accordion">
-
-    <div class="panel panel-default ">
-<a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
-      <div class="panel-heading">
-        <h4 class="panel-title">
-          The Edge Pub & Eatery
-        </h4>
-<span class="glyphicon glyphicon-chevron-down expand-arrow"></span>
+  <br />
+  <br />
+  <br />
+  <section id="directionsHeader">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-8">
+          <h2 class="headers">Directions</h2>
+          <br />
+        </div>
+        <!-- #col-sm-8  -->
       </div>
-				</a>
-      <div id="collapse1" class="panel-collapse collapse ">
-        <div class="panel-body">
-					<iframe width= "100%" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=Gordys%20County%20Market%20Lake%20Wissota%20Chippewa%20Falls%2C%20WI%2C%20United%20States&key=AIzaSyA1IUIDhvPVhbJZRFE90daaIOKWi_mG7YM"
-					allowfullscreen></iframe>
-				</div>
-      </div>
+      <!-- #row  -->
     </div>
-    <div class="panel panel-default">
-			<a data-toggle="collapse" data-parent="#accordion" href="#collapse2">
-      <div class="panel-heading">
-        <h4 class="panel-title">
-          The View
-        </h4>
-<span class="glyphicon glyphicon-chevron-down expand-arrow"></span>
+    <!-- #container  -->
+  </section>
+
+
+
+  <div class="container ">
+
+
+    <div class="panel-group" id="accordion">
+
+      <div class="panel panel-default ">
+        <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
+          <div class="panel-heading">
+            <h4 class="panel-title">
+              The Edge Pub & Eatery
+            </h4>
+            <span class="glyphicon glyphicon-chevron-down expand-arrow"></span>
+          </div>
+        </a>
+        <div id="collapse1" class="panel-collapse collapse ">
+          <div class="panel-body">
+            <iframe width="100%" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=Gordys%20County%20Market%20Lake%20Wissota%20Chippewa%20Falls%2C%20WI%2C%20United%20States&key=AIzaSyA1IUIDhvPVhbJZRFE90daaIOKWi_mG7YM"
+            allowfullscreen></iframe>
+          </div>
+        </div>
       </div>
-		</a>
-      <div id="collapse2" class="panel-collapse collapse">
-        <div class="panel-body">  <iframe width= "100%" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=The%20View%20Chippewa%20Falls%2C%20WI%2C%20United%20States&key=AIzaSyA1IUIDhvPVhbJZRFE90daaIOKWi_mG7YM"
-		      allowfullscreen></iframe></div>
+      <div class="panel panel-default">
+        <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">
+          <div class="panel-heading">
+            <h4 class="panel-title">
+              The View
+            </h4>
+            <span class="glyphicon glyphicon-chevron-down expand-arrow"></span>
+          </div>
+        </a>
+        <div id="collapse2" class="panel-collapse collapse">
+          <div class="panel-body">
+            <iframe width="100%" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=The%20View%20Chippewa%20Falls%2C%20WI%2C%20United%20States&key=AIzaSyA1IUIDhvPVhbJZRFE90daaIOKWi_mG7YM" allowfullscreen></iframe>
+          </div>
+        </div>
       </div>
-    </div>
-    <div class="panel panel-default">
-			  <a data-toggle="collapse" data-parent="#accordion" href="#collapse3">
-      <div class="panel-heading">
-        <h4 class="panel-title">
-        Gordy's County Market
-        </h4>
-<span class="glyphicon glyphicon-chevron-down expand-arrow"></span>
-      </div>
-			</a>
-      <div id="collapse3" class="panel-collapse collapse">
-        <div class="panel-body">	<iframe width= "100%" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=Gordys%20County%20Market%20Lake%20Wissota%20Chippewa%20Falls%2C%20WI%2C%20United%20States&key=AIzaSyA1IUIDhvPVhbJZRFE90daaIOKWi_mG7YM"
-					allowfullscreen></iframe></div>
+      <div class="panel panel-default">
+        <a data-toggle="collapse" data-parent="#accordion" href="#collapse3">
+          <div class="panel-heading">
+            <h4 class="panel-title">
+              Gordy's County Market
+            </h4>
+            <span class="glyphicon glyphicon-chevron-down expand-arrow"></span>
+          </div>
+        </a>
+        <div id="collapse3" class="panel-collapse collapse">
+          <div class="panel-body">
+            <iframe width="100%" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=Gordys%20County%20Market%20Lake%20Wissota%20Chippewa%20Falls%2C%20WI%2C%20United%20States&key=AIzaSyA1IUIDhvPVhbJZRFE90daaIOKWi_mG7YM"
+            allowfullscreen></iframe>
+          </div>
+        </div>
       </div>
     </div>
   </div>
-</div>
 
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <!-- Include all compiled plugins (below), or include individual files as needed -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 
 
-</footer>
-<!--End footer-->
+  </footer>
+  <!--End footer-->
 
 </html>
