--- a/index.html
+++ b/index.html
@@ -1,182 +1,219 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-		<title>Jigs Up | Home</title>
 
-		<!-- Bootstrap -->
-		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
-		<link href="css/custom.css" rel="stylesheet">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+  <title>Jigs Up | Home</title>
 
-		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-		<!--[if lt IE 9]>
+  <!-- Bootstrap -->
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/custom.css" rel="stylesheet">
+
+  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!--[if lt IE 9]>
 		  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 		  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 		<![endif]-->
 
-		<!-- FAVICON -->
-		<link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
-		<link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
-		<link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
-		<link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-icon-76x76.png">
-		<link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-icon-114x114.png">
-		<link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-icon-120x120.png">
-		<link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-icon-144x144.png">
-		<link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-icon-152x152.png">
-		<link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-icon-180x180.png">
-		<link rel="icon" type="image/png" sizes="192x192"  href="favicon/android-icon-192x192.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
-		<link rel="manifest" href="favicon/manifest.json">
-		<meta name="msapplication-TileColor" content="#ffffff">
-		<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-		<meta name="theme-color" content="#ffffff">
+  <!-- FAVICON -->
+  <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="favicon/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+  <link rel="manifest" href="favicon/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
 
-			<nav class="navbar navbar-inverse navbar-fixed-top">
-			<div class="container">
-				<!-- Brand and toggle get grouped for better mobile display -->
+  <nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+      <!-- Brand and toggle get grouped for better mobile display -->
 
-				<div class="navbar-header">
-					<button class="navbar-toggle" data-target=
-					"#bs-example-navbar-collapse-1" data-toggle="collapse" type=
-					"button"><span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span> <span class="icon-bar"></span>
-					<span class="icon-bar"></span></button>
-					<a class="navbar-brand" href="index.html"> <img src="images/logo.png" /> </a> <!-- Logo top aligns with navbar text top. -->
-				</div>
-				<!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="navbar-header">
+        <button class="navbar-toggle" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="index.html">
+          <img src="images/logo.png" /> </a>
+        <!-- Logo top aligns with navbar text top. -->
+      </div>
+      <!-- Collect the nav links, forms, and other content for toggling -->
 
-				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-					<ul class="nav navbar-nav">
-						<li class="dropdown">
-							<a class="dropdown-toggle navcol" data-toggle="dropdown" href="#">Event<span class="caret"></span></a>
-							<ul class="dropdown-menu">
-								<li><a href="directions.html">Directions</a></li>
-								<li role="presentation" class="divider"></li>
-								<li><a href="schedule.html">Schedule</a></li>
-								<li role="presentation" class="divider"></li>
-								<li><a href="prizes.html">Prizes</a></li>
-								<li role="presentation" class="divider"></li>
-								<li><a href="sponsors.html">Sponsors</a></li>
-								<li role="presentation" class="divider"></li>
-								<li><a href="results.html">Results</a></li>
-							</ul>
-						</li>
-						<li class="navcol"><a href="register.html">Register</a></li>
-						<li class="navcol"><a href="contact.html">Contact</a></li>
-						<li class="social-media"><a target="_blank" class="fbook" href="https://www.facebook.com/pages/The-Jigs-Up-Ice-Fishing-Contest/736663866412522"> <img src="images/facebook.png" class ="fbook"</img></a></li>
-						<li><a target="_blank" class="twitter" href="https://twitter.com/uwecrecreation"> <img src="images/twitter.png" class="twitter"</img></a></li>
-						<li><a target="_blank" class="twitter" href="https://instagram.com/UWEC_Recreation/"> <img src="images/instagram.png" class="fbook"</img></a></li>
-					</ul>
-				</div>
-				<!-- /.navbar-collapse -->
-			</div>
-			<!-- /.container -->
-		</nav>
-	</head>
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li class="dropdown">
+            <a class="dropdown-toggle navcol" data-toggle="dropdown" href="#">Event<span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="directions.html">Directions</a></li>
+              <li role="presentation" class="divider"></li>
+              <li><a href="schedule.html">Schedule</a></li>
+              <li role="presentation" class="divider"></li>
+              <li><a href="prizes.html">Prizes</a></li>
+              <li role="presentation" class="divider"></li>
+              <li><a href="sponsors.html">Sponsors</a></li>
+              <li role="presentation" class="divider"></li>
+              <li><a href="results.html">Results</a></li>
+            </ul>
+          </li>
+          <li class="navcol"><a href="register.html">Register</a></li>
+          <li class="navcol"><a href="contact.html">Contact</a></li>
+          <li class="social-media">
+            <a target="_blank" class="fbook" href="https://www.facebook.com/pages/The-Jigs-Up-Ice-Fishing-Contest/736663866412522">
+              <img src="images/facebook.png" class="fbook" </img>
+            </a>
+          </li>
+          <li>
+            <a target="_blank" class="twitter" href="https://twitter.com/uwecrecreation">
+              <img src="images/twitter.png" class="twitter" </img>
+            </a>
+          </li>
+          <li>
+            <a target="_blank" class="twitter" href="https://instagram.com/UWEC_Recreation/">
+              <img src="images/instagram.png" class="fbook" </img>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container -->
+  </nav>
+</head>
 
-	<body>
-		<section id="Slider">
-			<div id="carousel" class="carousel slide" data-ride="carousel">
-				<ol class="carousel-indicators">
-					<li data-target="#carousel-example" data-slide-to="0" class="active"></li>
-					<li data-target="#carousel-example" data-slide-to="1"></li>
-					<li data-target="#carousel-example" data-slide-to="2"></li>
-				</ol>
-				<div class="carousel-inner">
-					<div class="item active">
-						<a href="#"><img src="images/slider/slide2.jpg" /></a>
-					</div>
-					<div class="item">
-						<a href="#"><img src="images/slider/slide1.jpg" /></a>
-					</div>
-					<div class="item">
-						<a href="#"><img src="images/slider/slide3.jpg" /></a>
-					</div>
-				</div> <!-- #carousel-inner  -->
+<body>
+  <section id="Slider">
+    <div id="carousel" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carousel-example" data-slide-to="0" class="active"></li>
+        <li data-target="#carousel-example" data-slide-to="1"></li>
+        <li data-target="#carousel-example" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="item active">
+          <a href="#">
+            <img src="images/slider/slide2.jpg" />
+          </a>
+        </div>
+        <div class="item">
+          <a href="#">
+            <img src="images/slider/slide1.jpg" />
+          </a>
+        </div>
+        <div class="item">
+          <a href="#">
+            <img src="images/slider/slide3.jpg" />
+          </a>
+        </div>
+      </div>
+      <!-- #carousel-inner  -->
 
-				<a class="left carousel-control" href="#carousel-example" data-slide="prev">
-				</a>
-				<a class="right carousel-control" href="#carousel-example" data-slide="next">
-				</a>
-			</div> <!-- #carousel  -->
-			<div class="text-center">
-				</br>
-				<h1 class="headers">3rd Annual "The Jig's Up" Ice Fishing Contest</h1>
-				</br>
-			</div>
-		</section>
-		<section id="content">
-			<div class="container">
-				<div class="row">
-					<div class="col-sm-6">
-						<h3 class="headers">When:</h3> <h4>Saturday, February 13, 2016; 7am-2pm</h4> <br /> <br />
-						<blockquote>
-						 No need to check in, will-call tickets purchased on-line will be available for pick up at The View starting at 6:30am.
-					</blockquote>
-						<h3 class="headers">Where:</h3> <h4> Lake Wissota</h4>
-						<blockquote>
-							<b>Weigh-In Stations:</b> The Edge Pub & Eatery and Gordy's County Market on "Little Lake Wissota" <br />
-							<b>Prize Distribution:</b> The View on Lake Wissota, 3pm Raffle Prizes, 4pm Fish Prizes <br /> <br />
-						Lake Wissota is a reservoir in Chippewa County, Wisconsin, United States, just east of the city of Chippewa Falls.
-						It covers an area of 6,148 acres and has a maximum depth of 64.4 feet. Fish include musky, panfish, largemouth nass, smallmouth bass, northern pike, walleye, sturgeon and catfish.
-						For this contest, only northern, walleye, panfish (perch, bluegills, crappies), and bass will be considered
-					</blockquote>
-						<h3 class="headers">Fish Tickets:</h3> <h4>$25, one ticket required for each fish registered </h4>
-						<blockquote>
-							Over $30,000 in cash and prizes including a 2015 Ice Castle Scout. Prizes awarded to the top 25 fish by weight
-							and every 5th place thereafter to the 300th place so even a small fish can win big! All prizes will be distributed at the event,
-							regardless of the number of fish registered so hold on to your Fish Tickets.
-						</blockquote>
-						<h3 class = "headers">Raffle Tickets:</h3> <h4>$5 each or $20 for 5 </h4>
-						<blockquote>
-							$7,500 in prizes including a 2015 Polaris Sportsman 4-wheeler
-						</blockquote>
-						<p><i>The Wissota Lions Club will have food and beverages available on the ice. Parking will be available at The View, The Edge, and on the ice. All state regulations and bag limits
+      <a class="left carousel-control" href="#carousel-example" data-slide="prev">
+      </a>
+      <a class="right carousel-control" href="#carousel-example" data-slide="next">
+      </a>
+    </div>
+    <!-- #carousel  -->
+    <div class="text-center">
+      </br>
+      <h1 class="headers">3rd Annual "The Jig's Up" Ice Fishing Contest</h1>
+      </br>
+    </div>
+  </section>
+  <section id="content">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-6">
+          <h3 class="headers">When:</h3>
+          <h4>Saturday, February 13, 2016; 7am-2pm</h4>
+          <br />
+          <br />
+          <blockquote>
+            No need to check in, will-call tickets purchased on-line will be available for pick up at The View starting at 6:30am.
+          </blockquote>
+          <h3 class="headers">Where:</h3>
+          <h4> Lake Wissota</h4>
+          <blockquote>
+            <b>Weigh-In Stations:</b> The Edge Pub & Eatery and Gordy's County Market on "Little Lake Wissota"
+            <br />
+            <b>Prize Distribution:</b> The View on Lake Wissota, 3pm Raffle Prizes, 4pm Fish Prizes
+            <br />
+            <br /> Lake Wissota is a reservoir in Chippewa County, Wisconsin, United States, just east of the city of Chippewa Falls. It covers an area of 6,148 acres and has a maximum depth of 64.4 feet. Fish include musky, panfish, largemouth nass, smallmouth
+            bass, northern pike, walleye, sturgeon and catfish. For this contest, only northern, walleye, panfish (perch, bluegills, crappies), and bass will be considered
+          </blockquote>
+          <h3 class="headers">Fish Tickets:</h3>
+          <h4>$25, one ticket required for each fish registered </h4>
+          <blockquote>
+            Over $30,000 in cash and prizes including a 2015 Ice Castle Scout. Prizes awarded to the top 25 fish by weight and every 5th place thereafter to the 300th place so even a small fish can win big! All prizes will be distributed at the event, regardless
+            of the number of fish registered so hold on to your Fish Tickets.
+          </blockquote>
+          <h3 class="headers">Raffle Tickets:</h3>
+          <h4>$5 each or $20 for 5 </h4>
+          <blockquote>
+            $7,500 in prizes including a 2015 Polaris Sportsman 4-wheeler
+          </blockquote>
+          <p><i>The Wissota Lions Club will have food and beverages available on the ice. Parking will be available at The View, The Edge, and on the ice. All state regulations and bag limits
 							apply to this rule and no person may bring in more than the legal limit of fish allowed, which for this contest includes, northern, walleye, panfish (perch, bluegills, crappies), and bass.</i></p>
-					</div> <!-- #col-sm-6  -->
-					<div class="col-sm-6">
-						<br />
-						<div class="videowrapper">
-						<iframe width="560" height="315" src="https://www.youtube.com/embed/UsUAM8JMG4c?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
-						</div>
-					</div> <!-- #col-sm-6  -->
-				</div> <!-- #row  -->
-			</div> <!-- #container  -->
-			<br />
-			<br />
-			<br />
-			<br />
-		</section>
+        </div>
+        <!-- #col-sm-6  -->
+        <div class="col-sm-6">
+          <br />
+          <div class="videowrapper">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/UsUAM8JMG4c?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+          </div>
+        </div>
+        <!-- #col-sm-6  -->
+      </div>
+      <!-- #row  -->
+    </div>
+    <!-- #container  -->
+    <br />
+    <br />
+    <br />
+    <br />
+  </section>
 
-		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-		<!-- Include all compiled plugins (below), or include individual files as needed -->
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-	</body>
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+  <!-- Include all compiled plugins (below), or include individual files as needed -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+</body>
 
-  <!-- Footer -->
-	<footer >
-		<div class="footer hidden-xs">
-			<br />
-			<p> Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
-			<br /></p>
-			<div class="buildn">
-				/build 0.8.5.0
-			</div>
-		</div>
+<!-- Footer -->
+<footer>
+  <div class="footer hidden-xs">
+    <br />
+    <p> Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
+      <br />
+    </p>
+    <div class="buildn">
+      /build 0.8.5.0
+    </div>
+  </div>
 
-		<div class="footer visible-xs">
-			<br />
-			<p class="small-footer"> Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
-			<br />
-		</p>
+  <div class="footer visible-xs">
+    <br />
+    <p class="small-footer"> Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
+      <br />
+    </p>
 
-		</div>
-	</footer><!--End footer-->
+  </div>
+</footer>
+<!--End footer-->
+
 </html>
