--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
+          <li><a href="index.html">Home</a></li>
           <li class="dropdown">
             <a class="dropdown-toggle navcol" data-toggle="dropdown" href="#">Event<span class="caret"></span></a>
             <ul class="dropdown-menu">
